syntax = "proto3";

package pbapi;

option go_package = "/pbapi";

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

service EchoService {
    rpc EchoMethod (EchoRequest) returns (EchoResponse) {}
}